// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text control Disable 1`] = `
<div
  class="control disabled"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="name"
    >
      name
    </p>
    <div
      class="control__content"
    >
      
    
      <input
        class="text"
        disabled="true"
        type="text"
        value="test"
      />
      
  
    </div>
  </main>
</div>
`;

exports[`Text control Enable 1`] = `
<div
  class="control"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="name"
    >
      name
    </p>
    <div
      class="control__content"
    >
      
    
      <input
        class="text"
        type="text"
        value="test"
      />
      
  
    </div>
  </main>
</div>
`;

exports[`Text control If it matches snapshot after initial load 1`] = `
<div
  class="control"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="name"
    >
      name
    </p>
    <div
      class="control__content"
    >
      
    
      <input
        class="text"
        type="text"
        value="test"
      />
      
  
    </div>
  </main>
</div>
`;
